--- a/호서/5주차.md
+++ b/호서/5주차.md
@@ -7,25 +7,27 @@
 # 3.2 네트워크 연결 및 송신
 TCP는 연결 지향형 프로토콜 ( 스트림 형태 )
 TCP소켓당 하나의 EndPoint하고만 통신할 수 있다.
-클라이언트의 소켓 연결 단계
+
+## 클라이언트의 소켓 연결 단계
 소켓 생성 -> port에 bind -> connect
-소켓 버퍼에 대한 예고
 
 
 # 3.3 블로킹과 소켓 버퍼
 소켓은 송신 버퍼와 수신버퍼를 가지고 있음.
 버퍼는 FIFO형태고, 운영체제는 비정기적으로 버퍼에 있는것을 꺼내서 송신한다.
 소켓 통신시 무조건 블로킹이 발생하진 않는다.
-송신 버퍼
+
+## 송신 버퍼
 1. 사용자 push -> 운영체제 pop
 2. 버퍼가 가득찬 상태에서 send를 호출했을때만 블로킹이 발생한다.
 
 # 3.4 네트워크 연결 받기 및 수신
-서버에서 소켓 연결 단계
+
+## 서버에서 소켓 연결 단계
 소켓 생성 -> port에 bind -> 소켓을 리스팅 소켓으로(listen) -> 클라 소켓 연결을 대기함(accept)
 소켓에서 오류가 발생하면 음수를 리턴한다.
 
-수신 버퍼
+## 수신 버퍼
 1. 운영체제 push -> 사용자 pop
 2. 버퍼가 비어있는 상태에서 recv를 호출했을때만 블로킹이 발생한다.
 
