--- a/호서/5주차.md
+++ b/호서/5주차.md
@@ -48,7 +48,7 @@ UDP 클라이언트는 송신량을 줄이는 기능은 없음
 would block : 블로킹이 걸렸어야 하는 상황인데 리턴
 >> 소켓 에러처리시 예외처리가 필요하다.
 >> connect의 would block는 의미가 다르다(이미 연결 or 연결 실패)
->> 
+>>> 그래서 connect완료 확인을 위해 0바이트 패킷을 보냄
 
 논블럭 소켓에 sleep없이 매 프레임 호출되면 CPU과부하가 발생한다.
 때문에 수신할 것이 있다는 이벤트를 받기 전까지 블록킹되어 있을 필요가 있는데 이것을 해주는 함수가 select
